# panel-exchange-client

./: .bazelrc  .gitignore  AUTHORS  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-panel-exchange-client  bazel-testlogs  cert_helper.sh  container.bazelrc  diff.bk  helper.sh  keyfile.key  maven.bazelrc  remote.bazelrc
imports/java/com/google/api/services/: BUILD.bazel
imports/java/com/google/common/: BUILD.bazel
imports/java/org/apache/beam/: BUILD.bazel
imports/java/org/apache/beam/extensions/: BUILD.bazel
imports/java/org/apache/beam/runners/: BUILD.bazel
src/main/cc/wfa/panelmatch/client/eventpreprocessing/: BUILD.bazel  event_data_preprocessor.cc  event_data_preprocessor.h  preprocess_events.cc  preprocess_events_wrapper.cc
src/main/cc/wfa/panelmatch/client/eventpreprocessing/tools/: BUILD.bazel  encrypted_event_decrypter_main.cc
src/main/cc/wfa/panelmatch/client/keygeneration/: BUILD.bazel  key_generator.cc  key_generator.h
src/main/cc/wfa/panelmatch/common/compression/: BUILD.bazel  brotli.cc  brotli_wrapper.cc  brotli_wrapper.h
src/main/cc/wfanet/panelmatch/client/eventpreprocessing/: BUILD.bazel  encrypt_original_data.h  encrypt_original_data_wrapper.cc  encrypt_original_data_wrapper.h  preprocess_events.cc  preprocess_events.h  preprocess_events_wrapper.cc  preprocess_events_wrapper.h
src/main/cc/wfanet/panelmatch/common/crypto/: BUILD.bazel  aes.cc  aes.h  aes_with_hkdf.cc  aes_with_hkdf.h  cryptor.cc  cryptor.h  encrypt_identifier.h  encrypt_payload.h  encryption_utility_helper.cc  encryption_utility_helper.h  fingerprinter.h  generate_hashkey.h  hkdf.cc  hkdf.h  join_key_hash.h  peppered_fingerprinter.cc  peppered_fingerprinter.h  started_thread_cpu_timer.h
src/main/k8s/: BUILD.bazel  README.md  base.cue  example_daemon_gke.cue  macros.bzl
src/main/k8s/dev/: BUILD.bazel  README.md  base_aws.cue  edp_example_daemon_gke.cue  example_daemon_aws.cue  example_daemon_gke.cue  example_edp_daemon_aws.cue  example_edp_daemon_gke.cue  example_mp_daemon_aws.cue  example_mp_daemon_aws_with_gcp_credentials.cue  example_mp_daemon_gke.cue  mp_example_daemon_gke.cue
src/main/k8s/panelmatch/dev/: BUILD.bazel
src/main/k8s/testing/secretfiles/: BUILD.bazel  README.md  halo-cmm-dev-mp.json
src/main/kotlin/org/wfanet/panelmatch/client/batchlookup/: BUILD.bazel  BatchCreationWorkflow.kt  BatchLookupClient.kt  BatchLookupQueryEvaluator.kt  BatchLookupWorkflow.kt  Bucketing.kt  Coders.kt  CreateQueriesWorkflow.kt  JniObliviousQueryBuilder.kt  JniQueryCryptor.kt  JniQueryEvaluator.kt  ObliviousQueryBuilder.kt  Pipeline.kt  Protos.kt  QueryCryptor.kt  QueryCryptorWorkflow.kt  QueryEvaluator.kt
src/main/kotlin/org/wfanet/panelmatch/client/common/: BUILD.bazel  BrotliEventCompressorTrainer.kt  Coders.kt  CompressedEvents.kt  EventCompressorTrainer.kt  ExchangeContext.kt  NoOpCompressFactory.kt  Protos.kt  StepContext.kt  TaskParameters.kt  UncompressedDictionaryBuilder.kt  UncompressedEventCompressorTrainer.kt
src/main/kotlin/org/wfanet/panelmatch/client/deploy/: ApacheBeamRunner.kt  BUILD.bazel  DaemonStorageClientDefaults.kt  ExampleDaemon.kt  ExchangeWorkflowDaemon.kt  ExchangeWorkflowDaemonFromFlags.kt  ExchangeWorkflowDaemonFromTest.kt  ExchangeWorkflowDaemonMain.kt  ExchangeWorkflowFlags.kt  ProductionExchangeTaskMapper.kt  ProductionExchangeTaskMapperTaskMapper.kt
src/main/kotlin/org/wfanet/panelmatch/client/eventpreprocessing/: BUILD.bazel  BatchingDoFn.kt  BuildDictionary.kt  CompressByKey.kt  CompressEvents.kt  EncryptEventsDoFn.kt  EncryptionEventsDoFn.kt  EventCompressorTrainer.kt  EventPreprocessor.kt  EventPreprocessorFn.kt  HardCodedCryptoKeyProvider.kt  HardCodedPepperProvider.kt  HardCodedSaltProvider.kt  JniEventPreprocessor.kt  JniEventPreprocessorFn.kt  JniPreprocessEvents.kt  KvPairSize.kt  MaxByteSize.kt  PreprocessEvents.kt  PreprocessEventsInPipeline.kt  PreprocessEventsMain.kt  PreprocessingContext.kt  PreprocessingStepContext.kt  Staging.kt  UncompressedEventAggregatorTrainer.kt
src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks/: ApacheBeamContext.kt  ApacheBeamTask.kt  ApacheBeamTasks.kt  BUILD.bazel  BasicTasks.kt  BasicTasksImpl.kt  BuildPrivateMembershipQueries.kt  BuildPrivateMembershipQueriesTask.kt  CertificateServiceTask.kt  CommutativeEncryptionExchangeTask.kt  CommutativeEncryptionTasks.kt  CommutativeEncryptionTasksImpl.kt  CopyFromPreviousExchangeTask.kt  CopyFromSharedStorageBeamTask.kt  CopyFromSharedStorageTask.kt  CopyToSharedStorageBeamTask.kt  (+60 more)
src/main/kotlin/org/wfanet/panelmatch/tools/: BUILD.bazel  DeployToGke.kt  ExchangeWorkflowToGraphvizMain.kt
src/main/kotlin/wfanet/panelmatch/common/: BUILD.bazel  Runfiles.kt
src/main/kotlin/wfanet/panelmatch/protocol/common/: BUILD.bazel  CommutativeEncryption.kt  JniCommutativeEncryption.kt
src/main/proto/wfa/measurement/api/v2alpha/: BUILD.bazel
src/main/proto/wfa/panelmatch/client/database/: BUILD.bazel  database.proto
src/main/proto/wfa/panelmatch/client/joinkeyexchange/: BUILD.bazel  join_key.proto  join_key_cryptor.proto
src/main/proto/wfa/panelmatch/common/secrets/: BUILD.bazel  secrets.proto
src/main/proto/wfa/virtual_people/common/: BUILD.bazel
src/main/swig/wfanet/panelmatch/protocol/batchlookup/: BUILD.bazel
src/test/cc/testutil/: BUILD.bazel  matchers.h
src/test/cc/wfa/panelmatch/client/eventpreprocessing/: BUILD.bazel  event_data_preprocessor_test.cc  preprocess_events_test.cc
src/test/cc/wfa/panelmatch/client/joinkeyexchange/: BUILD.bazel  join_key_cryptor_test.cc
src/test/cc/wfa/panelmatch/client/keygeneration/: BUILD.bazel  key_generator_test.cc
src/test/kotlin/org/wfanet/panelmatch/integration/: BUILD.bazel  DoubleBlindWorkflowTest.kt  ExchangeWorkflowDaemonForTest.kt  ExchangeWorkflowDaemonFromTest.kt  FullWithPreprocessingTest.kt  FullWorkflowTest.kt  InProcessExchangeTaskMapper.kt  InProcessPanelMatchIntegrationTest.kt  MiniWorkflowTest.kt  SingleStepTest.kt
src/test/kotlin/wfanet/panelmatch/protocol/common/: BUILD.bazel  CommutativeEncryptionUtilityTest.kt  JniCommutativeEncryptionUtilityTest.kt
(+645 files in other folders)
