load("//build:variables.bzl", "EXAMPLE_DAEMON_CONFIG", "IMAGE_REPOSITORY_SETTINGS", "TEST_GOOGLE_CLOUD_SETTINGS")
load("@wfa_measurement_system//build/cue:defs.bzl", "cue_export")

package(default_visibility = ["//src/main/k8s:__subpackages__"])

cue_export(
    name = "example_daemon_from_cue_gke",
    srcs = [
        "base.cue",
        "example_daemon_gke.cue",
    ],
    cue_tags = {
        "daemon_id": EXAMPLE_DAEMON_CONFIG.daemon_id,
        "daemon_party_type": EXAMPLE_DAEMON_CONFIG.daemon_party_type,
        "cloud_storage_bucket": TEST_GOOGLE_CLOUD_SETTINGS.cloud_storage_bucket,
        "cloud_storage_project": TEST_GOOGLE_CLOUD_SETTINGS.cloud_storage_project,
        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
        "repository_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
    },
    expression = "listObject",
    filetype = "yaml",
    outfile = "example_daemon_from_cue_gke.yaml",
)
