load("//build:variables.bzl", "EXAMPLE_DAEMON_CONFIG", "IMAGE_REPOSITORY_SETTINGS", "TEST_GOOGLE_CLOUD_SETTINGS")
load("//src/main/docker:images.bzl", "ALL_GKE_IMAGES")
load("@wfa_rules_cue//cue:defs.bzl", "cue_export")

cue_export(
    name = "edp_example_daemon_gke",
    srcs = ["edp_example_daemon_gke.cue"],
    cue_tags = {
        "party_type": "DATA_PROVIDER",
        "daemon_id": EXAMPLE_DAEMON_CONFIG.daemon_id,
        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
        "secret_name": TEST_GOOGLE_CLOUD_SETTINGS.secret_name,
        "tink_key_uri": TEST_GOOGLE_CLOUD_SETTINGS.tink_key_uri,
        "private_ca_name": "20220126-brx-hab",
        "private_ca_pool_id": "SomeCommonName",
        "private_ca_location": "us-central1",
    },
    expression = "listObject",
    filetype = "yaml",
    tags = ["manual"],
    deps = ["//src/main/k8s:base"],
)

cue_export(
    name = "mp_example_daemon_gke",
    srcs = ["mp_example_daemon_gke.cue"],
    cue_tags = {
        "party_type": "MODEL_PROVIDER",
        "daemon_id": EXAMPLE_DAEMON_CONFIG.daemon_id,
        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
        "secret_name": TEST_GOOGLE_CLOUD_SETTINGS.secret_name,
        "tink_key_uri": TEST_GOOGLE_CLOUD_SETTINGS.tink_key_uri,
        "private_ca_name": "20220126-brx-hab",
        "private_ca_pool_id": "SomeCommonName",
        "private_ca_location": "us-central1",
    },
    expression = "listObject",
    filetype = "yaml",
    tags = ["manual"],
    deps = ["//src/main/k8s:base"],
)

ALL_IMAGE_ARCHIVES = [
    image_spec.image + ".tar"
    for image_spec in ALL_GKE_IMAGES
]

filegroup(
    name = "all_archives",
    srcs = ALL_IMAGE_ARCHIVES,
    tags = ["manual"],
)

filegroup(
    name = "k8s_deployment_config",
    srcs = [":edp_example_daemon_gke.yaml"],
    data = [":all_archives"],
    tags = ["manual"],
    visibility = [":k8s_deployer"],
)

package_group(
    name = "k8s_deployer",
    packages = ["//src/main/kotlin/org/wfanet/panelmatch/tools/..."],
)
