load("//build:variables.bzl", "EXAMPLE_DAEMON_CONFIG", "IMAGE_REPOSITORY_SETTINGS", "TEST_GOOGLE_CLOUD_SETTINGS")
load("//src/main/docker:images.bzl", "ALL_GKE_IMAGES")
load("@wfa_rules_cue//cue:defs.bzl", "cue_export")

cue_export(
    name = "edp_example_daemon_gke",
    srcs = ["edp_example_daemon_gke.cue"],
    cue_tags = {
        "daemon_id": EXAMPLE_DAEMON_CONFIG.daemon_id,
        "recurring_exchange_id": EXAMPLE_DAEMON_CONFIG.recurring_exchange_id,
        "container_registry": "gcr.io",
        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
        "secret_name": TEST_GOOGLE_CLOUD_SETTINGS.secret_name,
    },
    expression = "listObject",
    filetype = "yaml",
    tags = ["manual"],
    deps = ["//src/main/k8s:base"],
)

cue_export(
    name = "mp_example_daemon_gke",
    srcs = ["mp_example_daemon_gke.cue"],
    cue_tags = {
        "daemon_id": EXAMPLE_DAEMON_CONFIG.daemon_id,
        "recurring_exchange_id": EXAMPLE_DAEMON_CONFIG.recurring_exchange_id,
        "container_registry": "gcr.io",
        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
        "secret_name": TEST_GOOGLE_CLOUD_SETTINGS.secret_name,
    },
    expression = "listObject",
    filetype = "yaml",
    tags = ["manual"],
    deps = ["//src/main/k8s:base"],
)

ALL_IMAGE_ARCHIVES = [
    image_spec.image + ".tar"
    for image_spec in ALL_GKE_IMAGES
]

filegroup(
    name = "all_archives",
    srcs = ALL_IMAGE_ARCHIVES,
    tags = ["manual"],
)

filegroup(
    name = "edp_deployment_config",
    srcs = [":edp_example_daemon_gke"],
    data = [":all_archives"],
    tags = ["manual"],
    visibility = [":k8s_deployer"],
)

filegroup(
    name = "mp_deployment_config",
    srcs = [":mp_example_daemon_gke"],
    data = [":all_archives"],
    tags = ["manual"],
    visibility = [":k8s_deployer"],
)

package_group(
    name = "k8s_deployer",
    packages = ["//src/main/kotlin/org/wfanet/panelmatch/tools/..."],
)
