package(default_visibility = ["//visibility:public"])

alias(
    name = "guava",
    actual = "@maven//:com_google_guava_guava",
)

alias(
    name = "bigquery",
    actual = "@maven//:com_google_cloud_google_cloud_bigquery",
)

alias(
    name = "apisbigquery",
    actual = "@maven//:com_google_apis_google_api_services_bigquery",
)

alias(
    name = "bigquerystorage",
    actual = "@maven//:com_google_cloud_google_cloud_bigquerystorage",
)

alias(
    name = "json",
    actual = "@maven//:com_google_api_client_google_api_client_json",
)

alias(
    name = "http",
    actual = "@maven//:com_google_http_client_google_http_client",
)
