package(default_visibility = ["//visibility:public"])

alias(
    name = "cloud_bigquery",
    actual = "@maven//:com_google_cloud_google_cloud_bigquery",
)

alias(
    name = "services_bigquery",
    actual = "@maven//:com_google_apis_google_api_services_bigquery",
)

alias(
    name = "cloud_bigquerystorage",
    actual = "@maven//:com_google_cloud_google_cloud_bigquerystorage",
)
