load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/wfanet/panelmatch:__subpackages__",
    "//src/test/kotlin/wfanet/panelmatch:__subpackages__",
])

kt_jvm_library(
    name = "common",
    srcs = glob(["*.kt"]),
    runtime_deps = [
        #"//imports/kotlin/kotlin:stdlib_jdk7",
        #"//imports/kotlin/kotlin/reflect/jvm",
    ],
    deps = [
        "//imports/java/com/google/devtools/build/runfiles",
        "//imports/java/com/google/protobuf",
        "//imports/java/com/google/protobuf/util",
    ],
)
