cc_library(
  name = "encrypt_original_data",
  hdrs = ["encrypt_original_data.h"],
  deps = [
    "@com_google_absl//absl/status:statusor",
    "@com_google_absl//absl/strings",
    "@com_google_absl//absl/algorithm:container",
    "//src/main/proto/wfanet/panelmatch/client/eventpreprocessing:preprocess_events_cc_proto",
    #"//src/main/cc/wfanet/panelmatch/protocol/crypto/event_data_preprocessor.h:EventDataPreprocessor",
  ],
)

cc_library(
  name = "encrypt_original_data_wrapper",
  hdrs = ["encrypt_original_data_wrapper.h"],
  srcs = ["encrypt_original_data_wrapper.cc"],
  deps = [
    ":encrypt_original_data",
    "//src/main/proto/wfanet/panelmatch/client/eventpreprocessing:preprocess_events_cc_proto"
  ],
)