cc_library(
  strip_include_prefix = "/src/main/cc",
  name = "preprocess_events",
  hdrs = ["preprocess_events.h"],
  deps = [
    "@com_google_absl//absl/status:statusor",
    "@com_google_absl//absl/strings",
    "@com_google_absl//absl/algorithm:container",
    "//src/main/proto/wfanet/panelmatch/client/eventpreprocessing:preprocess_events_cc_proto",
    #"//src/main/cc/wfanet/panelmatch/protocol/crypto/preprocess_events.h:PreprocessEvents",
  ],
)

cc_library(
  strip_include_prefix = "/src/main/cc",
  name = "preprocess_events_wrapper",
  hdrs = ["preprocess_events_wrapper.h"],
  srcs = ["preprocess_events_wrapper.cc"],
  deps = [
    "@wfa_measurement_system//src/main/cc/wfa/measurement/common/crypto:encryption_utility_helper",
    ":preprocess_events",
    "//src/main/proto/wfanet/panelmatch/client/eventpreprocessing:preprocess_events_cc_proto"
  ],
)