load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary")

kt_jvm_library(
    name = "exchange_workflow_to_graphviz_main",
    srcs = ["ExchangeWorkflowToGraphvizMain.kt"],
    deps = [
        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/graphviz",
    ],
)

java_binary(
    name = "exchange_workflow_to_graphviz",
    main_class = "org.wfanet.panelmatch.tools.ExchangeWorkflowToGraphvizMainKt",
    tags = ["manual"],
    runtime_deps = [":exchange_workflow_to_graphviz_main"],
)

kt_jvm_library(
    name = "run_subprocess",
    srcs = ["RunSubprocess.kt"],
    deps = [
        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
    ],
)

kt_jvm_library(
    name = "deploy_to_gke_impl",
    srcs = ["DeployToGke.kt"],
    tags = ["manual"],
    deps = [
        ":run_subprocess",
        "@wfa_common_jvm//imports/java/picocli",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

java_binary(
    name = "deploy_edp_panelmatch_dev_to_gke",
    args = [
        "--yaml-file=edp_example_daemon_gke.yaml",
        "--environment=dev",
    ],
    data = [
        "//src/main/k8s/dev:edp_deployment_config",
    ],
    main_class = "org.wfanet.panelmatch.tools.DeployToGkeKt",
    tags = ["manual"],
    runtime_deps = ["deploy_to_gke_impl"],
)

java_binary(
    name = "deploy_mp_panelmatch_dev_to_gke",
    args = [
        "--yaml-file=mp_example_daemon_gke.yaml",
        "--environment=dev",
    ],
    data = [
        "//src/main/k8s/dev:mp_deployment_config",
    ],
    main_class = "org.wfanet.panelmatch.tools.DeployToGkeKt",
    tags = ["manual"],
    runtime_deps = ["deploy_to_gke_impl"],
)
