load("@rules_java//java:defs.bzl", "java_proto_library")
load("//build:macros.bzl", "kt_jvm_grpc_and_java_proto_library")

package(default_visibility = ["//visibility:public"])

java_proto_library(
    name = "model_provider_java_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:model_provider_proto",
    ],
)

java_proto_library(
    name = "data_provider_java_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:data_provider_proto",
    ],
)

java_proto_library(
    name = "exchange_step_java_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_proto",
    ],
)

java_proto_library(
    name = "exchange_step_attempt_java_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_proto",
    ],
)

kt_jvm_grpc_and_java_proto_library(
    name = "exchange_steps_service_kt_jvm_grpc",
    srcs = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_proto"],
)

kt_jvm_grpc_and_java_proto_library(
    name = "exchange_step_attempts_service_kt_jvm_grpc",
    srcs = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_proto"],
)
