load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@wfa_common_jvm//build:kt_jvm_proto_library.bzl", "kt_jvm_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//src:__subpackages__"])

proto_library(
    name = "database_proto",
    srcs = ["database.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "database_cc_proto",
    deps = [":database_proto"],
)

java_proto_library(
    name = "database_java_proto",
    deps = [":database_proto"],
)

kt_jvm_proto_library(
    name = "database_kt_jvm_proto",
    srcs = [":database_proto"],
    deps = [":database_java_proto"],
)
