load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@wfa_common_jvm//build:kt_jvm_proto_library.bzl", "kt_jvm_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "join_key_exchange_proto",
    srcs = ["join_key.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "join_key_exchange_cc_proto",
    deps = [":join_key_exchange_proto"],
)

java_proto_library(
    name = "join_key_exchange_java_proto",
    deps = [":join_key_exchange_proto"],
)

kt_jvm_proto_library(
    name = "join_key_exchange_kt_jvm_proto",
    srcs = [":join_key_exchange_proto"],
    deps = [":join_key_exchange_java_proto"],
)

proto_library(
    name = "join_key_cryptor_proto",
    srcs = ["join_key_cryptor.proto"],
    strip_import_prefix = "/src/main/proto",
    deps = [":join_key_exchange_proto"],
)

cc_proto_library(
    name = "join_key_cryptor_cc_proto",
    deps = [":join_key_cryptor_proto"],
)

java_proto_library(
    name = "join_key_cryptor_java_proto",
    deps = [":join_key_cryptor_proto"],
)

kt_jvm_proto_library(
    name = "join_key_cryptor_kt_jvm_proto",
    srcs = [":join_key_cryptor_proto"],
    deps = [":join_key_cryptor_java_proto"],
)
