load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@wfa_common_jvm//build:kt_jvm_proto_library.bzl", "kt_jvm_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "secrets_proto",
    srcs = ["secrets.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "secrets_cc_proto",
    deps = [":secrets_proto"],
)

java_proto_library(
    name = "secrets_java_proto",
    deps = [":secrets_proto"],
)

kt_jvm_proto_library(
    name = "secrets_kt_jvm_proto",
    srcs = [":secrets_proto"],
    deps = [":secrets_java_proto"],
)
