load("@wfa_rules_swig//java:defs.bzl", "java_wrap_cc")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/panelmatch:__subpackages__",
    "//src/test/kotlin/org/wfanet/panelmatch:__subpackages__",
])

java_wrap_cc(
    name = "oblivious_query",
    src = "oblivious_query.swig",
    module = "SwigObliviousQuery",
    package = "org.wfanet.panelmatch.protocol.batchlookup",
    deps = [
        "//src/main/cc/wfa/panelmatch/client/batchlookup:oblivious_query_wrapper",
    ],
)
