load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "preprocess_events_test",
    timeout = "short",
    srcs = ["preprocess_events_test.cc"],
    deps = [
        "//src/main/cc/wfa/panelmatch/client/eventpreprocessing:event_data_preprocessor",
        "//src/main/cc/wfa/panelmatch/client/eventpreprocessing:preprocess_events",
        "//src/main/cc/wfa/panelmatch/common/crypto:register_identity_key_loader",
        "//src/main/proto/wfa/panelmatch/client/eventpreprocessing:preprocess_events_cc_proto",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "event_data_preprocessor_test",
    timeout = "short",
    srcs = ["event_data_preprocessor_test.cc"],
    deps = [
        "//src/main/cc/wfa/panelmatch/client/eventpreprocessing:event_data_preprocessor",
        "//src/main/cc/wfa/panelmatch/common/crypto:aes",
        "//src/main/cc/wfa/panelmatch/common/crypto:aes_with_hkdf",
        "//src/main/cc/wfa/panelmatch/common/crypto:deterministic_commutative_cipher",
        "//src/main/cc/wfa/panelmatch/common/crypto:hkdf",
        "//src/main/cc/wfa/panelmatch/common/crypto:register_identity_key_loader",
        "@com_google_googletest//:gtest_main",
        "@tink_base//cc/util:secret_data",
        "@wfa_common_cpp//src/main/cc/common_cpp/fingerprinters",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
