load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "key_generator_test",
    srcs = [
        "key_generator_test.cc",
    ],
    deps = [
        "//src/main/cc/wfa/panelmatch/client/keygeneration:key_generator",
        "@googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
